syntax = "proto3";
package KafkaSchemaEvolutioner.Tests.Proto.Generated;
import "protobuf-net/bcl.proto"; // schema for protobuf-net's handling of core .NET types

message SampleEventKey {
    .bcl.Guid SampleId = 1 [deprecated = true];
    optional .bcl.Guid NewSampleId = 2;
}